# FreeMedia: Simple infrastructure for hosting different kinds of media.
#     Copyright (C) 2026  Anatnaso
#
#     This program is free software: you can redistribute it and/or modify
#     it under the terms of the GNU General Public License as published by
#     the Free Software Foundation, either version 3 of the License, or
#     (at your option) any later version.
#
#     This program is distributed in the hope that it will be useful,
#     but WITHOUT ANY WARRANTY; without even the implied warranty of
#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#     GNU General Public License for more details.
#
#     You should have received a copy of the GNU General Public License
#     along with this program.  If not, see <https://www.gnu.org/licenses/>.

[project]
name = "freemedia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136",
    "psycopg2>=2",
    "pydantic-settings>=2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46",
]

[project.scripts]
main = "freemedia_bootstrap:main"

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = [
    "freemedia_shared",
    "freemedia_settings",
    "freemedia_database",
    "freemedia_application",
    "freemedia_bootstrap",
]
